--- a/src/bp-templates/bp-nouveau/common-styles/_bp_item_body_general.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_item_body_general.scss
@@ -17,6 +17,14 @@
 			margin: $marg-xlrg 0 $marg-med;
 		}
 
+		.group-create-buttons {
+			list-style: none;
+
+			li {
+				padding-right: 12px;
+			}
+		}
+
 	}
 }
 
