--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -6828,7 +6828,7 @@ body.reply-edit .reply {
 }
 
 #bbpress-forums li {
-  background: none;
+  background: red;
   margin: 0;
   list-style: none;
 }
