--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -9409,6 +9409,7 @@ body.login .login-popup .mfp-close:hover {
   min-height: 100%;
   width: auto;
   min-width: 100%;
+  border-radius: 3px;
   object-fit: cover;
 }
 
