--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -410,8 +410,12 @@ tr.bp-search-parent-field label {
 }
 
 /* Settings */
-.bp-admin-card.section-bp_main h2:before, .bp-admin-card.section-bp_privacy h2:before {
+.bp-admin-card.section-bp_main h2:before {
 	background-image: url(../../images/admin/icons/fontawesome/solid/tools.svg);
+}
+
+.bp-admin-card.section-bp_privacy h2:before {
+	background-image: url(../../images/admin/icons/fontawesome/solid/user-secret.svg);
 }
 
 /* Profiles */
