--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -215,6 +215,8 @@ TABLE OF CONTENTS:
 /*
  * 2.2 Settings - Components
  */
+
+/*
 #bp-admin-component-form .tablenav {
 	margin-bottom: 10px;
 }
@@ -275,6 +277,7 @@ TABLE OF CONTENTS:
 		padding-bottom: 35px;
 	}
 }
+*/
 
 /*
  * 2.3 Tools
