--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -216,69 +216,6 @@ TABLE OF CONTENTS:
  * 2.2 Settings - Components
  */
 
-/*
-#bp-admin-component-form .tablenav {
-	margin-bottom: 10px;
-}
-
-#bp-admin-component-form .wp-list-table.plugins {
-
-	.active td,
-	.active th {
-		background: #fff;
-		box-shadow: none;
-	}
-
-	.plugin-title {
-		padding: 20px 20px 0;
-
-		.plugin-item {
-			position: relative;
-			border-width: 1px;
-			border-color: #d2d2d2;
-			border-style: solid;
-			background-color: #fafafa;
-			box-shadow: 0 1px 0 #d2d2d2;
-			padding: 2em;
-			border-radius: 3px;
-
-			.row-actions {
-				padding: 1em 0 0;
-			}
-		}
-
-		strong {
-			font-weight: 600;
-			font-size: 16px;
-			margin-bottom: 1em;
-			border-bottom: 1px solid #eaeaea;
-			padding-bottom: 1em;
-		}
-	}
-}
-
-#bp-admin-component-form .subsubsub {
-	padding-bottom: 5px;
-}
-
-#bp-admin-component-form span.required {
-	color: #32373c;
-}
-
-@media screen and ( max-width: 782px ) {
-
-	#bp-admin-component-form .wp-list-table.plugins .plugin-title {
-		display: block;
-		width: auto;
-	}
-
-	#bp-admin-component-form .subsubsub {
-		margin-bottom: 0;
-		padding-bottom: 35px;
-	}
-}
-*/
-
 #bp-admin-component-form .component-card {
 	float: left;
 	margin: 0 8px 16px;
@@ -330,6 +267,10 @@ TABLE OF CONTENTS:
 	margin: 0;
 }
 
+#bp-admin-component-form .component-action-buttons li {
+	margin-bottom: 10px;
+}
+
 #bp-admin-component-form .component-icon {
 	position: absolute;
 	top: 20px;
@@ -365,6 +306,48 @@ TABLE OF CONTENTS:
 	clear: right;
 	width: 65%;
 	width: calc(100% - 180px);
+}
+
+@media screen and (max-width: 1100px) and (min-width: 782px), (max-width: 480px) {
+
+	#bp-admin-component-form .component-card .desc,
+	#bp-admin-component-form .component-card .name {
+		margin-right: 0;
+	}
+
+	#bp-admin-component-form .component-card .desc p:first-of-type {
+		margin-top: 0;
+	}
+
+	#bp-admin-component-form .component-card .action-links {
+		position: static;
+		margin-left: 148px;
+		width: auto;
+	}
+
+	#bp-admin-component-form .component-action-buttons {
+		float: none;
+		margin: 1em 0 0;
+		text-align: left;
+	}
+
+	#bp-admin-component-form .component-action-buttons li {
+		display: inline-block;
+		vertical-align: middle;
+	}
+
+	#bp-admin-component-form .component-action-buttons li .button {
+		margin-right: 20px;
+	}
+}
+
+@media screen and (max-width: 782px) {
+
+	#bp-admin-component-form .component-card {
+		margin-left: 0;
+		margin-right: 0;
+		width: 100%;
+	}
 }
 
 /*
