--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -243,6 +243,24 @@ TABLE OF CONTENTS:
   line-height: 1.3;
 }
 
+#bp-admin-component-form .component-card h3:before {
+  content: " ";
+  background-size: 128px 128px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #f6f6f6;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 128px;
+  height: 128px;
+  margin: 0 0 20px 20px;
+}
+
+#bp-admin-component-form .component-card.forums h3:before {
+  background-image: url(../../images/forum.svg);
+}
+
 #bp-admin-component-form .component-card .desc,
 #bp-admin-component-form .component-card .name {
   margin-right: 148px;
