--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -261,8 +261,16 @@ TABLE OF CONTENTS:
 	margin: 0 20px 20px 0;
 }
 
+#bp-admin-component-form .component-card.members h3:before {
+	background-image: url(../../images/members.svg);
+}
+
 #bp-admin-component-form .component-card.xprofile h3:before {
 	background-image: url(../../images/membership.svg);
+}
+
+#bp-admin-component-form .component-card.groups h3:before {
+	background-image: url(../../images/groups.svg);
 }
 
 #bp-admin-component-form .component-card.forums h3:before {
