--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -220,6 +220,14 @@ TABLE OF CONTENTS:
 	margin-top: 20px;
 }
 
+#bp-admin-component-form .column-cb {
+	margin: 0 0 10px;
+}
+
+#bp-admin-component-form .column-cb label {
+	vertical-align: top;
+}
+
 #bp-admin-component-form .component-card {
 	float: left;
 	margin: 0 8px 16px;
