--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -216,6 +216,14 @@ TABLE OF CONTENTS:
   margin-top: 20px;
 }
 
+#bp-admin-component-form .column-cb {
+  margin: 0 0 10px;
+}
+
+#bp-admin-component-form .column-cb label {
+  vertical-align: top;
+}
+
 #bp-admin-component-form .component-card {
   float: right;
   margin: 0 8px 16px;
