--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -238,6 +238,7 @@ TABLE OF CONTENTS:
 
 #component-filter .filter-select label {
 	vertical-align: top;
+	font-size: 14px;
 }
 
 #component-filter .filter-actions {
@@ -409,6 +410,10 @@ TABLE OF CONTENTS:
 }
 
 @media screen and (max-width: 782px) {
+
+	#component-filter .filter-select {
+		padding-top: 20px;
+	}
 
 	#bp-admin-component-form .component-card {
 		margin-left: 0;
