--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -373,7 +373,11 @@ TABLE OF CONTENTS:
 	float: right;
 	clear: right;
 	width: 65%;
-	width: calc(100% - 180px);
+	width: calc(100% - 180px)
+}
+
+#bp-admin-component-form .component-card .component-inactive {
+	color: #dc3232;
 }
 
 @media screen and (max-width: 1100px) and (min-width: 782px), (max-width: 480px) {
