--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -226,21 +226,21 @@ TABLE OF CONTENTS:
   font-size: 13px;
 }
 
+#component-filter .filter-actions {
+  display: inline-block;
+  margin: 10px 0;
+}
+
 #component-filter .filter-select {
   display: inline-block;
-  padding: 16px 10px 16px 0;
+  float: left;
+  padding: 16px 0 16px 10px;
   margin: 0;
 }
 
 #component-filter .filter-select label {
   vertical-align: top;
   font-size: 14px;
-}
-
-#component-filter .filter-actions {
-  display: inline-block;
-  float: left;
-  margin: 10px 0;
 }
 
 #bp-admin-component-form .component-card {
