Media and Albums

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_dropzone.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_dropzone.scss
@@ -579,7 +579,7 @@
 		}
 
 		span:before {
-			background: url(../images/upload-large.svg) no-repeat;
+			background: url(../images/upload.svg) no-repeat;
 			background-size: cover;
 			content: " ";
 			height: 41px;
