--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -377,12 +377,8 @@
 }
 
 .bb-photos-meta {
-    margin-left: auto;
-	margin-top: -40px;
-
-	.album-single-view & {
-		margin-top: 0;
-	}
+	margin-left: auto;
+	margin-bottom: 10px;
 }
 
 .bb-photos-date {
@@ -395,14 +391,12 @@
 	flex-flow: row wrap;
 	list-style: none;
 	padding: 0;
-	margin: 0 -3px;
+	margin: 0 -5px;
 
 	li {
 		flex: 0 0 20%;
-		padding-left: 3px;
-		padding-right: 3px;
-		margin-bottom: 3px;
-		margin-top: 3px;
+		margin: 0;
+		padding: 5px;
 	}
 }
 
@@ -423,7 +417,6 @@
 		min-height: 100%;
 		width: auto;
 		min-width: 100%;
-		border-radius: 3px;
 		object-fit: cover;
 	}
 
@@ -1083,8 +1076,17 @@ ul.bb-albums-list {
 }
 
 .bb-media-actions-wrap {
-	display: flex;
+	display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+	-webkit-box-pack: justify;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
 	margin: 15px 0;
+
+	h2 {
+		margin: 0;
+	}
 }
 
 .bb-add-media {
