--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -9377,11 +9377,7 @@ body.login .login-popup .mfp-close:hover {
 
 .bb-photos-meta {
   margin-left: auto;
-  margin-top: -40px;
-}
-
-.album-single-view .bb-photos-meta {
-  margin-top: 0;
+  margin-bottom: 10px;
 }
 
 .bb-photos-date {
@@ -9394,15 +9390,13 @@ body.login .login-popup .mfp-close:hover {
   flex-flow: row wrap;
   list-style: none;
   padding: 0;
-  margin: 0 -3px;
+  margin: 0 -5px;
 }
 
 .buddypress-wrap .bp-list.bb-photo-list li {
   flex: 0 0 20%;
-  padding-left: 3px;
-  padding-right: 3px;
-  margin-bottom: 3px;
-  margin-top: 3px;
+  margin: 0;
+  padding: 5px;
 }
 
 .bb-photo-cover-wrap {
@@ -9423,7 +9417,6 @@ body.login .login-popup .mfp-close:hover {
   min-height: 100%;
   width: auto;
   min-width: 100%;
-  border-radius: 3px;
   object-fit: cover;
 }
 
@@ -10037,8 +10030,17 @@ ul.bb-albums-list .bb-more-photos strong {
 }
 
 .bb-media-actions-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   margin: 15px 0;
+}
+
+.bb-media-actions-wrap h2 {
+  margin: 0;
 }
 
 .bb-add-media {
