--- a/src/bp-core/admin/css/common.css
+++ b/src/bp-core/admin/css/common.css
@@ -1167,3 +1167,32 @@ td label.platform-activity {
   display: inline-block;
   vertical-align: top;
 }
+
+.buddyboss_page_bp-help .wrap li ul {
+  margin-left: 1em;
+}
+
+.buddyboss_page_bp-help .wrap .bp-help-card {
+  position: relative;
+  margin-top: 20px;
+  padding: 2.2em 2.8em 2em;
+  min-width: 255px;
+  max-width: 1050px;
+  border-radius: 6px;
+  border: 1px solid #e5e5e5;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+  background: #fff;
+}
+
+.buddyboss_page_bp-help .help-sections-wrap > ul > li {
+  width: 31%;
+  float: left;
+  margin-right: 2%;
+  margin-bottom: 2%;
+  position: relative;
+  min-width: 215px;
+  border: 1px solid #e5e5e5;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
+  background: #fff;
+}
